Update tags field to allow multiple tags and enable search