@@ -4,47 +4,48 @@ import com.bookmarks.bookmarks_system.exception.MarkNotFoundException;
 import com.bookmarks.bookmarks_system.exception.UserNotFoundException;
 import com.bookmarks.bookmarks_system.model.dto.MarkDto;
 import com.bookmarks.bookmarks_system.model.entity.Mark;
+import com.bookmarks.bookmarks_system.model.entity.Tag;
 import com.bookmarks.bookmarks_system.model.entity.User;
 import com.bookmarks.bookmarks_system.repository.MarkRepo;
+import com.bookmarks.bookmarks_system.repository.TagRepo;
 import com.bookmarks.bookmarks_system.repository.UserRepo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 public class MarkService {
 
-    @Autowired
-    private MarkRepo markRepo;
-    @Autowired
-    private UserRepo userRepo;
+    @Autowired private MarkRepo markRepo;
+    @Autowired private UserRepo userRepo;
+    @Autowired private TagRepo tagRepo;
 
-    public MarkDto addBookMarkToUser(Integer userId, MarkDto mark) {
+    public MarkDto addBookMarkToUser(Integer userId, MarkDto markDto) {
         User user = userRepo.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("User with id = " + userId + " not found"));
 
-        Mark savedMark = markRepo.save(Mark.toEntity(mark, user));
-        return MarkDto.toDto(savedMark);
+        Set<Tag> tags = resolveTags(markDto.getTags());
+        Mark saved = markRepo.save(Mark.toEntity(markDto, user, tags));
+        return MarkDto.toDto(saved);
     }
 
-    public MarkDto updateBookMarkToUser(Integer userId, MarkDto mark) {
-        User user = userRepo.findById(userId)
+    public MarkDto updateBookMarkToUser(Integer userId, MarkDto markDto) {
+        userRepo.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("User with id = " + userId + " not found"));
 
-        Mark existMark = markRepo.findById(mark.getId())
-                .orElseThrow(() -> new MarkNotFoundException("Mark with id = " + mark.getId() + " not found"));
+        Mark existMark = markRepo.findById(markDto.getId())
+                .orElseThrow(() -> new MarkNotFoundException("Mark with id = " + markDto.getId() + " not found"));
 
         if (!existMark.getUser().getId().equals(userId)) {
             throw new MarkNotFoundException("This mark does not belong to user with id = " + userId);
         }
 
-        existMark.setUrl(mark.getUrl());
-        existMark.setName(mark.getName());
-        existMark.setDes(mark.getDes());
-        existMark.setType(mark.getType());
-        existMark.setTag(mark.getTag());
+        existMark.setUrl(markDto.getUrl());
+        existMark.setName(markDto.getName());
+        existMark.setDes(markDto.getDes());
+        existMark.setType(markDto.getType());
+        existMark.setTags(resolveTags(markDto.getTags()));
 
         return MarkDto.toDto(markRepo.save(existMark));
     }
@@ -56,43 +57,37 @@ public class MarkService {
     }
 
     public List<MarkDto> getAllMark() {
-        return markRepo.findAll().stream()
-                .map(MarkDto::toDto)
-                .collect(Collectors.toList());
+        return markRepo.findAll().stream().map(MarkDto::toDto).toList();
     }
 
     public void deleteById(Integer id) {
-        if (!markRepo.existsById(id)) {
+        if (!markRepo.existsById(id))
             throw new MarkNotFoundException("Mark with id = " + id + " not found");
-        }
         markRepo.deleteById(id);
     }
 
     public List<MarkDto> searchByTag(String tagName) {
-        List<Mark> marks = markRepo.findByTag(tagName);
-
-        if (marks.isEmpty()) {
+        List<Mark> marks = markRepo.findByTags_Name(tagName);
+        if (marks.isEmpty())
             throw new MarkNotFoundException("No marks found with tag = " + tagName);
-        }
-
-        return marks.stream()
-                .map(MarkDto::toDto)
-                .toList();
+        return marks.stream().map(MarkDto::toDto).toList();
     }
 
-    public List<MarkDto> getMarksForUser(Integer userId) {
-        User user = userRepo.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User with id = " + userId + " not found"));
+    public List<MarkDto> getMarksForUser(Integer userId){
+        return markRepo.findByUserId(userId).stream().map(MarkDto::toDto).toList();
+    }
 
-        List<Mark> marks = markRepo.findByUserId(userId);
 
-        if (marks.isEmpty()) {
-            throw new MarkNotFoundException("No marks found for user with id = " + userId);
-        }
-
-        return marks.stream()
-                .map(MarkDto::toDto)
-                .toList();
+    private Set<Tag> resolveTags(Set<String> tagNames){
+        if (tagNames == null) return new HashSet<>();
+        return tagNames.stream()
+                .filter(Objects::nonNull)
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .map(s -> s.toLowerCase())
+                .map(name -> tagRepo.findByName(name)
+                        .orElseGet(() -> tagRepo.save(Tag.builder().name(name).build())))
+                .collect(Collectors.toSet());
     }
 
 }
